[gd_scene load_steps=5 format=3 uid="uid://do503v857w53m"]

[ext_resource type="Texture2D" uid="uid://bmr8krfyl8eav" path="res://Images/background.png" id="1_oksu7"]
[ext_resource type="Script" path="res://Menu/Menu.gd" id="2_ex5rr"]
[ext_resource type="Script" path="res://global/Label.gd" id="3_wrf1h"]
[ext_resource type="AudioStream" uid="uid://b5l1nmclysi5s" path="res://Music/Background Music/relaxing-145038.wav" id="4_3a4yl"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="Background" type="TextureRect" parent="CanvasLayer"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_oksu7")
expand_mode = 1

[node name="Menu" type="Control" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ex5rr")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Background/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -137.5
offset_right = 45.5
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Background/Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/MarginContainer"]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.647059, 0.172549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.407843)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/normal_font_size = 100
text = "GAME TITLE"
fit_content = true
scroll_active = false
autowrap_mode = 0
tab_size = 8
shortcut_keys_enabled = false

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Shop" type="Button" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="Setings" type="Button" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Setings"

[node name="Credits" type="Button" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="debug menu" type="Label" parent="CanvasLayer/Background"]
layout_mode = 0
offset_right = 88.0
offset_bottom = 23.0
text = "Main Menu"
script = ExtResource("3_wrf1h")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3a4yl")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Start" to="CanvasLayer/Background/Menu" method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Shop" to="CanvasLayer/Background/Menu" method="_on_shop_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Setings" to="CanvasLayer/Background/Menu" method="_on_setings_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Setings" to="CanvasLayer/Background/Menu" method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Credits" to="CanvasLayer/Background/Menu" method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/Menu/HBoxContainer/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Quit" to="CanvasLayer/Background/Menu" method="_on_quit_pressed"]
